--- a/Kermit_Lydia.Rmd
+++ b/Kermit_Lydia.Rmd
@@ -33,3 +33,20 @@ kermit_hist
 ```
 
 
+Creator: Perform rank based comparisons using Mann-Whitney U and Wilcoxon-Signed Rank
+
+Question: Is there a significant difference in pre-talk ranks of Kermit for Male and Female respondents? 
+
+```{r}
+#compares ranks with unpaired data
+mwu_kermit <- kermit %>% 
+  wilcox.test(Score.pre ~ Gender, data = .)
+
+# Null hypothesis: There is NOT a significant difference in ranks for male and female respondents
+# Alternative: There IS a significant difference in ranks
+
+mwu_kermit
+
+```
+
+There was no significant difference in ranks for male and female respondents (W = 1.55, p = 0.4, alpha = 0.05 (use in line referencing))
